--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "mock": "json-server mock/db.json --port=8080 --routes mock/routes.json"
   },
   "eslintConfig": {
     "extends": [
@@ -150,7 +151,11 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.17.9",
     "@craco/craco": "^6.4.3",
+    "@faker-js/faker": "^7.2.0",
     "babel-plugin-import": "^1.13.5",
-    "craco-less": "^2.0.0"
+    "craco-less": "^2.0.0",
+    "json-server": "^0.17.0",
+    "json5": "^2.2.1",
+    "mockjs": "^1.1.0"
   }
 }
